--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
     "/public/build"
   ],
   "dependencies": {
-    "@prisma/client": "^4.5.0",
-    "@radix-ui/react-icons": "^1.1.1",
-    "@radix-ui/react-select": "^1.1.2",
-    "@radix-ui/react-toggle": "^1.0.1",
-    "@remix-run/node": "^1.8.2",
-    "@remix-run/react": "^1.8.2",
-    "@remix-run/serve": "^1.8.2",
-    "@remix-run/server-runtime": "^1.8.2",
-    "axios": "^1.2.1",
+    "@prisma/client": "^4.12.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-toggle": "^1.0.2",
+    "@remix-run/node": "^1.15.0",
+    "@remix-run/react": "^1.15.0",
+    "@remix-run/serve": "^1.15.0",
+    "@remix-run/server-runtime": "^1.15.0",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
-    "isbot": "^3.6.3",
+    "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
@@ -48,45 +48,46 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@remix-run/dev": "^1.8.2",
-    "@remix-run/eslint-config": "^1.8.2",
+    "@remix-run/dev": "^1.15.0",
+    "@remix-run/eslint-config": "^1.15.0",
     "@testing-library/cypress": "^8.0.3",
     "@testing-library/dom": "^8.19.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/eslint": "^8.4.10",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
+    "@types/eslint": "^8.37.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
     "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
-    "@vitest/coverage-c8": "^0.24.5",
-    "autoprefixer": "^10.4.13",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.29.8",
+    "autoprefixer": "^10.4.14",
     "binode": "^1.0.5",
-    "c8": "^7.12.0",
+    "c8": "^7.13.0",
     "cookie": "^0.5.0",
     "cross-env": "^7.0.3",
     "cypress": "^10.11.0",
-    "eslint": "^8.26.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "happy-dom": "^6.0.4",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-cypress": "^2.13.2",
+    "happy-dom": "^8.9.0",
     "msw": "^0.47.4",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.18",
-    "prettier": "2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.5.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.2.6",
+    "prisma": "^4.12.0",
     "start-server-and-test": "^1.14.0",
-    "tailwindcss": "^3.2.2",
+    "tailwindcss": "^3.3.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.8.4",
-    "vite": "^3.2.2",
-    "vite-tsconfig-paths": "^3.5.2",
-    "vitest": "^0.24.5"
+    "vite": "^4.2.1",
+    "vite-tsconfig-paths": "^4.0.8",
+    "vitest": "^0.29.8"
   },
   "engines": {
     "node": ">=14"
