--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
+    "dev:redis": "docker compose up -d",
     "format": "prettier --write .",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
@@ -40,6 +41,7 @@
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
+    "ioredis": "^5.3.1",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
